# mcmaster-bot

./: .gitignore  Cargo.toml  README.md  app.py  pyproject.toml
mcmaster_bot/: __main__.py
src/: main.rs
