[package]
name = "pulse-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10"
reqwest = "0.11.10"
serde_json = "1.0.79"
tokio = {version = "1.17.0", features = ["full"]}
scraper = "0.12.0"